<!--
  Copyright 2013 Felix Große
  Released under the GNU GPL license


  This file is part of Crypdroid.
 
  Crypdroid is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
 
  Crypdroid is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
 
  You should have received a copy of the GNU General Public License
  along with Crypdroid.  If not, see <http://www.gnu.org/licenses/>.
 -->
<resources>

    <string name="app_name">Crypdroid</string>
    <string name="button_copy">Copy to clipboard</string>
    <string name="button_decrypt">Decrypt</string>
    <string name="button_encrypt">Encrypt</string>
    <string name="button_enter_text">Enter text</string>
    <string name="button_next">Next »</string>
    <string name="button_save">Save locally</string>
    <string name="button_select_file">Select file</string>
    <string name="button_send">Send</string>
    <string name="button_send_as_attachment">Send as attachment</string>
    <string name="button_show">Show</string>
    <string name="check_show_pw">show password</string>
    <string name="content_desc_file_action_chooser">icon representing the data</string>
    <string name="error_internal">Aw, snap! Something went wrong, please try again.</string>
    <string name="error_internal_io">Something went wrong while reading / writing internal files. Do you have enough free space?</string>
    <string name="error_invalid_plaintext">Aw, snap! There was an error while encrypting your text.</string>
    <string name="error_not_encrypted">The data could not be decrypted. Is this a ciphertext from Crypdroid or Cryptool2? May the data be corrupted?</string>
    <string name="error_wrong_password">The data could not be decrypted. Is this the correct password?</string>
    <string name="file_saved">The file was saved successfully.</string>
    <string name="fileview_save_header_text">Save here</string>
    <string name="hint_password">enter passwort</string>
    <string name="hint_text">enter your message here</string>
    <string name="notify_text_copied">The text was copied to the clipboard.</string>
    <string name="save_dialog_title">Enter the filename</string>
    <string name="save_dialog_message">Save the file with the following filename:</string>
    <string name="save_dialog_ok">Save</string>
    <string name="save_dialog_cancel">Cancel</string>
    <string name="send_with">Send with &#8230;</string>
    <string name="text_cipher_warn_show">Attention: Do not choose to show the ciphertext, if it is big (e.g. an encrypted image). This could cause Crypdroid to run out of memory.</string>
    <string name="text_data_cipher_large">Ciphertext</string>
    <string name="text_data_cipher_small">What do you want to do with it?</string>
    <string name="text_data_crypter_encrypted_large">Received a file from another App</string>
    <string name="text_data_crypter_encrypted_small">enter the passwort to encrypt</string>
    <string name="text_data_crypter_file_large">You have chosen a file</string>
    <string name="text_data_crypter_file_small">En- or decrypt the file?</string>
    <string name="text_data_crypter_text_large">You have entered a text</string>
    <string name="text_data_crypter_text_small">En- or decrypt the text?</string>
    <string name="text_data_plain_text_large">Decrypted Text</string>
    <string name="text_data_plain_text_small">What do you want to do with it?</string>
    <string name="text_data_plain_file_large">Decrypted File</string>
    <string name="text_data_plain_file_small">What do you want to do with it?</string>
    <string name="text_greeting_large">Welcome to Crypdroid!</string>
    <string name="text_greeting_small">Please choose 1 of the options to get started:</string>
    <string name="text_help">Crypdroid en- and decrypts your files and texts with the AES-256 algorithm.\n\nYour data is encrypted with a session-key that is derived from a passwort entered by you. For this the cryptograpic standard PKCS #5 is used. The combination of the AES-256 with a session-key protects your data for years to come!\n\nCrypdroid is combatibel with the tool "Encrypt with Password" in the Open-Source-Software <a href="http://www.cryptool.org">CrypTool 2</a>. Therefore you are able to not only exchange encrypted texts between every Android device with Crypdroid but also with every PC that has Cryptool 2 installed.\n\nDo you have an idea on how to improve Crypdroid or do you want to lend a hand in the further development of Crypdroid? Or do you want to be sure that Crypdroid does protect your personal data?\nYou are in luck because Crypdroid is Open Source! The source code is published on <a href="https://github.com/ZweiPunktFuenf/Crypdroid">github.com</a>.</string>
    <string name="title_activity_action_chooser">Success! What now?</string>
    
    <string name="permission_private_label">Do not grant anyone</string>
    <string name="permission_private_desc">Do not grant any Application this permission</string>

</resources>