<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
 		android:padding="@dimen/padding_large" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_large" >

        <ImageView
            android:id="@+id/image_data"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/padding_small"
            android:contentDescription="@string/content_desc_file_action_chooser"
            android:src="@drawable/ic_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_data_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_data_crypter_text_large"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/text_data_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_data_crypter_text_small"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_small"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="text" >
    </EditText>

    <CheckBox
        android:id="@+id/checkShowPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_small"
        android:onClick="onClickShowPassword"
        android:text="@string/check_show_pw" />

    <Button
        android:id="@+id/button_encrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:onClick="onClickEncrypt"
        android:text="@string/button_encrypt" />

    <Button
        android:id="@+id/button_decrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickDecrypt"
        android:text="@string/button_decrypt" />
    
</LinearLayout>