<!--
  This file is part of Crypdroid.
 
  Crypdroid is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
 
  Crypdroid is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
 
  You should have received a copy of the GNU General Public License
  along with Crypdroid.  If not, see <http://www.gnu.org/licenses/>.
 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:orientation="vertical"
    		android:padding="@dimen/padding_large" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_large" >

            <ImageView
                android:id="@+id/image_data"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/padding_small"
                android:contentDescription="@string/content_desc_file_action_chooser"
                android:src="@drawable/ic_file_encrypted" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/text_data_large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_data_cipher_large"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/text_data_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_data_cipher_small"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_small"
            android:onClick="onClickSend"
            android:text="@string/button_send" />

        <Button
            android:id="@+id/button_send_as_attachment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_small"
            android:onClick="onClickSendAttachment"
            android:text="@string/button_send_as_attachment" />
        
        <Button
            android:id="@+id/button_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_small"
            android:onClick="onClickShow"
            android:text="@string/button_show" />
        
        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_small"
            android:onClick="onClickSave"
            android:text="@string/button_save" />

        <TextView
            android:id="@+id/text_warn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            android:text="@string/text_cipher_warn_show"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
    </LinearLayout>    
</ScrollView>
