<!--
  This file is part of Crypdroid.
 
  Crypdroid is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
 
  Crypdroid is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
 
  You should have received a copy of the GNU General Public License
  along with Crypdroid.  If not, see <http://www.gnu.org/licenses/>.
 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:orientation="vertical"
    		android:padding="@dimen/padding_large" >

		    <TextView
		        android:id="@+id/text_greeting_large"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="@dimen/padding_small"
		        android:text="@string/text_greeting_large"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <TextView
		        android:id="@+id/text_greeting_small"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="@dimen/padding_large"
		        android:text="@string/text_greeting_small"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
		
		    <Button
		        android:id="@+id/button_select_file"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="@dimen/padding_small"
		        android:layout_marginTop="@dimen/padding_small"
		        android:onClick="onClickFile"
		        android:text="@string/button_select_file" />
		
		    <Button
		        android:id="@+id/button_enter_text"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="@dimen/padding_large"
		        android:onClick="onClickText"
		        android:text="@string/button_enter_text" />
		
		    <TextView
		        android:id="@+id/text_help"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="@dimen/padding_small"
		        android:layout_marginTop="@dimen/padding_small"
		        android:text="@string/text_help"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
		    
		</LinearLayout>
		
</ScrollView>